--- a/airwrite/templates/airwrite/home/home.html
+++ b/airwrite/templates/airwrite/home/home.html
@@ -28,13 +28,10 @@
                     <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
                     Menu
                 </div>
-                {% load socialaccount %}
-<div class="nav-item">
-    <a href="{% provider_login_url 'google' %}" class="icon" style="display:flex;align-items:center;gap:8px;text-decoration:none;color:inherit;">
-        <svg viewBox="0 0 24 24" width="20" height="20"><path d="M12 12h8.5c.3-1 .5-2 .5-3s-.2-2-.5-3H12V3H9v6H4v3h5v6h3v-6z"/></svg>
-        Iniciar con Google
-    </a>
-</div>
+                <div class="nav-item">
+                    <svg viewBox="0 0 24 24"><path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"/></svg>
+                    Menu
+                </div>
             </nav>
         </div>
 
