Cambios recientes en SMS-7-Jorge

--- a/airwrite/static/airwrite/css/login.css
+++ b/airwrite/static/airwrite/css/login.css
@@ -1,4 +1,4 @@
-/* @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
 @import url("https://fonts.googleapis.com/css?family=Red+Hat+Display:700,800,500,400,600|Inter:400|Rubik:800");
 
 * {
@@ -659,4 +659,4 @@ a {
 
 .register-field.field-3 {
   top: 416px;
-} */
+}
