--- a/airwrite/templates/airwrite/index.html
+++ b/airwrite/templates/airwrite/index.html
@@ -30,32 +30,34 @@
 
             <div class="section-title">GENERAL</div>
             
-            <div class="menu-item active">
-                <div class="menu-icon">
-                    <svg viewBox="0 0 24 24" width="20" height="20">
-                        <path fill="currentColor" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
-                    </svg>
-                </div>
-                <span>Home</span>
-            </div>
 
-            <div class="menu-item">
+            <a href="{% url 'home' %}" style="text-decoration: none";>
+                <div class="menu-item active">
+                    <div class="menu-icon">
+                        <svg viewBox="0 0 24 24" width="20" height="20">
+                            <path fill="currentColor" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                        </svg>
+                    </div>
+                    <span>Home</span>
+                </div>
+            </a>
+            {% comment %} <div class="menu-item">
                 <div class="menu-icon">
                     <svg viewBox="0 0 24 24" width="20" height="20">
                         <path fill="currentColor" d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm11 15H4v-2h16v2zm0-5H4V8h5.08L7 10.83 8.62 12 12 7.4l3.38 4.6L17 10.83 14.92 8H20v6z"/>
                     </svg>
                 </div>
                 <span>Herramientas</span>
-            </div>
+            </div> {% endcomment %}
 
-            <div class="menu-item">
+            {% comment %} <div class="menu-item">
                 <div class="menu-icon">
                     <svg viewBox="0 0 24 24" width="20" height="20">
                         <path fill="currentColor" d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h14l4 4V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"/>
                     </svg>
                 </div>
                 <span>Comando de Voz</span>
-            </div>
+            </div> {% endcomment %}
 
             <div class="menu-item">
                 <div class="menu-icon">
@@ -79,10 +81,10 @@
                 <img src="{% url 'video_feed_cam' %}" alt="Vista previa de cámara">
             </div>
 
-            <div class="action-buttons">
+            {% comment %} <div class="action-buttons">
                 <button class="btn btn-primary">Escribir</button>
                 <button class="btn btn-secondary">Dibujar</button>
-            </div>
+            </div> {% endcomment %}
 
             <div class="config-section">
                 <div class="section-title">CONFIGURACIÓN</div>
@@ -97,10 +99,10 @@
                 <div class="menu-item">
                     <div class="menu-icon">
                         <svg viewBox="0 0 24 24" width="20" height="20">
-                            <path fill="currentColor" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                            <path d="M12 12c2.7 0 4.9-2.2 4.9-4.9S14.7 2.2 12 2.2 7.1 4.4 7.1 7.1 9.3 12 12 12zm0 2.2c-3.3 0-9.9 1.7-9.9 5v2.7h19.8v-2.7c0-3.3-6.6-5-9.9-5z"/>
                         </svg>
                     </div>
-                    <span>Home</span>
+                    <span>{{ user.first_name }}</span>
                 </div>
             </div>
         </aside>
@@ -122,7 +124,7 @@
                 </button>
 
 
-                <button class="tool-btn" title="Editar">
+                <button class="tool-btn" title="Editar Grosor">
                     <span class="material-icons">edit</span>
                 </button>
 
@@ -130,7 +132,7 @@
                     <span class="material-icons">delete</span>
                 </button>
 
-                <button id="recordButton" class="mic-btn" title="Grabar audio">
+                <button id="recordButton" class="mic-btn" title="Hablar">
                     <svg viewBox="0 0 24 24">
                         <path d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"/>
                         <path d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"/>
